--- a/nibba.html
+++ b/nibba.html
@@ -13,11 +13,11 @@
       </a></div>
       
       <ul>
-        <li><a href="#Beranda">Beranda</a></li>
-        <li><a href="#About">Tentang Saya</a></li>
-        <li><a href="#Goals">Goals</a></li>
-        <li><a href="#Pendidikan">Pendidikan</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="https://nabilheker.github.io/nabilwebsite/index1.html">Beranda</a></li>
+        <li><a href="https://nabilheker.github.io/tentangsaya.html">Tentang Saya</a></li>
+        <li><a href="https://nabilheker.github.io/nabilwebsite3/goals.html">Goals</a></li>
+        <li><a href="https://nabilheker.github.io/nabilwebsite4/pendidikan.html">Pendidikan</a></li>
+        <li><a href="https://nabilheker.github.io/webs6/nibba.html">Contact</a></li>v
         <li><a haref="" class="tbl-biru">Sign Up</a></li>
          </ul>
          </div>
