--- a/nibba.html
+++ b/nibba.html
@@ -17,7 +17,7 @@
         <li><a href="https://nabilheker.github.io/tentangsaya.html">Tentang Saya</a></li>
         <li><a href="https://nabilheker.github.io/nabilwebsite3/goals.html">Goals</a></li>
         <li><a href="https://nabilheker.github.io/nabilwebsite4/pendidikan.html">Pendidikan</a></li>
-        <li><a href="https://nabilheker.github.io/webs6/nibba.html">Contact</a></li>v
+        <li><a href="https://nabilheker.github.io/webs6/nibba.html">Contact</a></li>
         <li><a haref="" class="tbl-biru">Sign Up</a></li>
          </ul>
          </div>
